<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">碰撞桌</string>
    <string name="subtitle">点子垃圾箱 · 领域碰撞引擎</string>
    <string name="tap_to_start">按「撞一个」，让两个领域随机对撞</string>
    <string name="collide">撞一个</string>
    <string name="daily">每日一撞</string>
    <string name="open_pool">点子池</string>
    <string name="pool_count">池中存活 %1$d 条火花</string>
    <string name="pool_title">点子池</string>
    <string name="pool_hint">点击任意火花可标记：垃圾 / 有点意思 / 心动。7 天未标记自动变垃圾。</string>
    <string name="mark_junk">垃圾</string>
    <string name="mark_meh">有点意思</string>
    <string name="mark_love">心动</string>
    <string name="cancel">取消</string>
    <string name="status_line">%1$s · 剩 %2$d 天</string>
    <string name="status_died">已死亡</string>
    <string name="daily_already">今天已撞过：%1$s</string>
</resources>
